--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "clean": "rimraf dist && mkdir dist",
     "start": "node server/server.js",
-    "predev": "npm run clean",
+    "predev": "npm run clean && npm run build",
     "dev": "npm-run-all --parallel dev:*",
-    "dev:client": "vite --config vite.config.js",
-    "dev:server": "node server/server.js --ext js,liquid",
+    "dev:client": "chokidar 'client/**/*' -c 'npm run build:client'",    "dev:server": "node server/server.js --ext js,liquid",
     "prebuild": "npm run clean",
     "build": "npm-run-all build:*",
     "build:client": "vite build"
@@ -19,7 +18,7 @@
     "@tinyhttp/app": "^2.5.2",
     "@tinyhttp/logger": "^2.1.0",
     "dotenv": "^16.4.7",
-    "liquidjs": "^10.21.0",
+    "chokidar-cli": "^3.0.0",
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
     "sirv": "^3.0.1",
